# ripsaw

./: CHANGELOG.md  Cargo.toml  Makefile  README.md  build.rs  clippy.toml  deny.toml
.github/workflows/: check_generated_docs.yml  check_generated_docs_comment.yml  gardener_open_pr.yml  rust-library.yaml  rust-lint.yaml  scorecard.yml
benches/: kind.rs  stdlib.rs
lib/cli/: Cargo.toml
lib/cli/src/: main.rs
lib/cli/tests/: repl.rs
lib/fuzz/: Cargo.toml  README.md
lib/fuzz/src/: main.rs
lib/tests/: Cargo.toml  README.md
lib/tests/src/: main.rs
lib/tests/tests/: README.md
lib/tests/tests/diagnostics/: README.md  abort_with_non_string_message.vrl  call_to_undefined_function.vrl  call_to_undefined_variable.vrl  cannot_mutate_element_for_non_array_type.vrl  cannot_mutate_field_for_non_object_type.ripsaw  cant_abort_infallible_function.ripsaw  chained_comparison_operator.vrl  function_argument_fallible.ripsaw  function_argument_missing.vrl  function_wrong_number_of_arguments.vrl  invalid_escape_char.vrl  invalid_if_condition_type.ripsaw  invalid_raw_string.ripsaw  invalid_string.vrl  invalid_timestamp.ripsaw  invalid_unary_not_type.ripsaw  merge_assignment_wrong_type.vrl  misnamed_literal_type.ripsaw  regex_parsing_unsuccessful.ripsaw  reserved_keyword.ripsaw  scoping_undefined_variable.ripsaw  syntax_error_path_segment.ripsaw  unhandled_expression_error.vrl  unhandled_function_error.ripsaw  unknown_function_argument_keyword.vrl  unnecessary_error_assignment.ripsaw  unnecessary_error_coalesce.vrl  unterminated_literal.vrl
lib/tests/tests/diagnostics/unusued/: top_level.vrl
lib/tests/tests/expressions/arithmetic/addition/: invalid.ripsaw
lib/tests/tests/expressions/arithmetic/division/: invalid.ripsaw
lib/tests/tests/expressions/arithmetic/multiplication/: invalid.vrl
lib/tests/tests/expressions/arithmetic/subtraction/: invalid.ripsaw
lib/tests/tests/expressions/assignment/: read_only.vrl  read_only_metadata.vrl  read_only_nested_recursive.vrl  read_only_recursive.ripsaw  read_only_root.vrl  read_only_root_recursive.vrl
lib/tests/tests/expressions/block/: fallible.ripsaw
lib/tests/tests/expressions/function_call/: closure_scope.vrl  keyword_argument.ripsaw  metadata_argument.ripsaw  positional_argument.vrl
lib/tests/tests/expressions/if_statement/: conditional_assignment.ripsaw  error_predicate.ripsaw  if_else_external_assignment.ripsaw  if_else_local_assignment.ripsaw  if_else_object.vrl  if_expression.vrl  if_external_assignment.vrl  if_local_assignment.vrl  if_null.vrl  if_resolves.ripsaw
lib/tests/tests/expressions/literal/: array_undefined_upgrade copy.ripsaw  object_undefined_upgrade.vrl
lib/tests/tests/expressions/logical/: err.ripsaw
lib/tests/tests/expressions/query/: container_side_effect.vrl  function_side_effect.vrl
lib/tests/tests/expressions/return/: return_bad_type_in_closure.ripsaw
lib/tests/tests/expressions/short_circuit/: and.ripsaw  err_coalesce.vrl  or.vrl
lib/tests/tests/fixme/: README.md
lib/tests/tests/functions/: README.md  chunks_chunk_size_at_least_1.ripsaw  chunks_fallible_given_expression.ripsaw
lib/tests/tests/functions/del/: external_del_type_def.ripsaw  return_type.ripsaw
lib/tests/tests/functions/replace_with/: error_in_closure.vrl  wrong_type.ripsaw
lib/tests/tests/internal/: README.md  fallible_op1.vrl  fallible_op2.ripsaw  literals_through_variables.ripsaw
lib/tests/tests/issues/: 6469_fallible_operations_marked_as_infallible.vrl  6571_invalid_escape.ripsaw
lib/tests/tests/rfcs/7204/: prevent-incorrect-error-diagnostics.ripsaw  remove-generic-fallible-error.ripsaw
src/: lib.rs
src/cli/: cmd.rs  mod.rs  repl.rs
src/compiler/: category.rs  compile_config.rs  compiler.rs  context.rs  expression_error.rs  function.rs  mod.rs  prelude.rs  program.rs  target.rs  type_def.rs  unused_expression_checker.rs  value.rs
src/compiler/expression/: abort.rs  assignment.rs  function_call.rs  if_statement.rs  literal.rs  not.rs  op.rs  predicate.rs  query.rs
src/compiler/function/: closure.rs
src/compiler/value/: arithmetic.rs  convert.rs
src/diagnostic/: diagnostic.rs  mod.rs  note.rs
src/docs/: cmd.rs  mod.rs
src/parser/: ast.rs  lex.rs  parser.lalrpop
src/parsing/: xml.rs
src/path/: mod.rs  owned.rs
src/protobuf/: encode.rs  parse.rs
src/stdlib/: all.rs  any.rs  assert.rs  basename.rs  dirname.rs  format_timestamp.rs  is_null.rs  map.rs  mod.rs  replace_with.rs  string_utils.rs  to_float.rs  unnest.rs  util.rs  zip.rs
src/test/: mod.rs  test.rs
src/value/: secrets.rs  value.rs
src/value/kind/: conversion.rs
src/value/value/: iter.rs
src/value/value/crud/: get.rs  get_mut.rs
