[package]
name = "ripsaw"
version = "1.0.0"
edition = "2024"
license-file = "./LICENSE"
description = "ripsaw scripting language"
repository = "https://github.com/bitdriftlabs/ripsaw"
readme = "README.md"
publish = false
rust-version = "1.88" # msrv

[workspace]
members = [
  ".",
  "lib/cli",
  "lib/tests",
  # "lib/fuzz",
]

[workspace.dependencies]
clap = { version = "4", features = ["derive"] }

[features]
default = ["compiler", "value", "diagnostic", "path", "parser", "stdlib", "core"]

# Main features (on by default)
compiler = ["diagnostic", "path", "parser", "value", "dep:chrono", "dep:serde", "dep:regex", "dep:bytes", "dep:ordered-float", "dep:chrono-tz", "dep:snafu", "dep:thiserror", "dep:dyn-clone", "dep:indoc", "dep:thiserror", "dep:lalrpop-util"]
value = ["path", "dep:bytes", "dep:regex", "dep:ordered-float", "dep:chrono", "dep:serde_json", "dep:simdutf8"]
diagnostic = ["dep:codespan-reporting", "dep:termcolor"]
path = ["value", "dep:serde", "dep:snafu", "dep:regex"]
parser = ["path", "diagnostic", "value", "dep:thiserror", "dep:ordered-float", "dep:lalrpop-util"]
parsing = ["value", "compiler", "dep:url", "dep:nom", "dep:regex", "dep:roxmltree", "dep:rust_decimal"]
core = ["value", "dep:snafu", "dep:nom"]
string_path = []

# Features that aren't used as often (default off)
cli = ["stdlib", "dep:clap", "dep:serde_json", "dep:thiserror", "dep:exitcode", "dep:webbrowser", "dep:rustyline", "dep:prettytable-rs"]
test_framework = ["compiler", "dep:prettydiff", "dep:serde_json", "dep:ansi_term"]
arbitrary = ["dep:quickcheck", "dep:arbitrary"]
lua = ["dep:mlua"]
proptest = ["dep:proptest", "dep:proptest-derive"]
float_roundtrip = ["dep:serde_json", "serde_json/float_roundtrip"]

# Testing Utilities. Enables additional tests, including those with external dependencies such as network calls.
test = ["string_path"]

docs = ["stdlib", "indexmap/serde", "serde_json/preserve_order", "dep:clap", "dep:thiserror", "dep:exitcode"]

# All stdlib functions (base + all enable_* features)
stdlib = [
  "stdlib-base",
]

# Base stdlib functionality (without enable_* features)
stdlib-base = [
  "compiler",
  "core",
  "parsing",
  "dep:convert_case",
  "dep:hex",
  "dep:indexmap",
  "dep:prost",
  "dep:prost-reflect",
  "dep:publicsuffix",
  "dep:quoted_printable",
  "dep:rust_decimal",
  "dep:strum",
  "dep:strum_macros",
  "dep:utf8-width",
]

[dependencies]
cfg-if = "1"

# Optional dependencies
ansi_term = { version = "0.12", optional = true }
arbitrary = { version = "1", optional = true, features = ["derive"] }
base16 = { version = "0.2", optional = true }
base62 = { version = "2.2.1", optional = true }
base64-simd = { version = "0.8", optional = true }
bytes = { version = "1", default-features = false, optional = true }
charset = { version = "0.1", optional = true }
encoding_rs = { version = "0.8.35", optional = true }
chrono = { version = "0.4", default-features = false, features = ["clock", "serde", "wasmbind"], optional = true }
chrono-tz = { version = "0.10", default-features = false, optional = true }
ciborium = { version = "0.2.2", default-features = false, optional = true }
cidr = { version = "0.3", optional = true }
csv = { version = "1", optional = true }
clap = { workspace = true, optional = true }
codespan-reporting = { version = "0.12", optional = true }
convert_case = { version = "0.7.1", optional = true }
crc = { version = "3.3.0", optional = true }
digest = { version = "0.10", optional = true }
dyn-clone = { version = "1", default-features = false, optional = true }
exitcode = { version = "1", optional = true }
hex = { version = "0.4", optional = true }
iana-time-zone = { version = "0.1", optional = true }
idna = { version = "1.0", optional = true }
indexmap = { version = "2", default-features = false, features = ["std"], optional = true }
influxdb-line-protocol = { version = "2.0.0", optional = true }
indoc = { version = "2", optional = true }
itertools = { version = "0.14", default-features = false, features = ["use_std"], optional = true }
lalrpop-util = { version = "0.22", optional = true }
mlua = { version = "0.10", default-features = false, features = ["lua54", "send", "vendored"], optional = true }
nom = { version = "8", default-features = false, features = ["std"], optional = true }
ordered-float = { version = "4", default-features = false, optional = true }
md-5 = { version = "0.10", optional = true }
parse-size = { version = "1.1.0",  optional = true }
peeking_take_while = { version = "1", default-features = false, optional = true }
percent-encoding = { version = "2", optional = true }
pest = { version = "2", default-features = false, optional = true, features = ["std"] }
pest_derive = { version = "2", default-features = false, optional = true, features = ["std"] }
proptest = { version = "1", optional = true }
proptest-derive = { version = "0.6", optional = true }
prettydiff = { version = "0.8", default-features = false, optional = true }
prettytable-rs = { version = "0.10", default-features = false, optional = true }
quickcheck = { version = "1", optional = true }
quoted_printable = { version = "0.5", optional = true }
psl = { version = "2", optional = true }
psl-types = { version = "2", optional = true }
publicsuffix = { version = "2", optional = true }
rand = { version = "0.8", optional = true }
regex = { version = "1", default-features = false, optional = true, features = ["std", "perf", "unicode"] }
relative-path = { version = "2.0.1", optional = true }
roxmltree = { version = "0.21", optional = true }
rustyline = { version = "17", default-features = false, optional = true }
rust_decimal = { version = "1", optional = true, default-features = false }
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", default-features = false, optional = true, features = ["std", "raw_value"] }
serde_yaml_ng = { version = "0.10.0" }
simdutf8 = { version = "0.1.5", optional = true }
fancy-regex = { version = "0.17", default-features = false, optional = true }
snap = { version = "1", optional = true }
syslog_loose = { version = "0.22", optional = true }
termcolor = { version = "1", optional = true }
thiserror = { version = "2", optional = true }
tracing = { version = "0.1", default-features = false }
ua-parser = { version = "0.2", optional = true }
utf8-width = { version = "0.1", optional = true }
url = { version = "2", optional = true }
snafu = { version = "0.8", optional = true }
strum = { version = "0.26", optional = true }
strum_macros = { version = "0.26", optional = true }
webbrowser = { version = "1.0", default-features = false, optional = true }
woothee = { version = "0.13", optional = true }
xxhash-rust = { version = "0.8", optional = true, features = [
  "xxh3",
  "xxh32",
  "xxh64",
] }
community-id = { version = "0.2", optional = true }

zstd = { version = "0.13", default-features = false, features = ["wasm"], optional = true }

# Protobuf support.
prost = { version = "0.13", default-features = false, optional = true, features = ["std"] }
prost-reflect = { version = "0.14", default-features = false, optional = true }
unicode-segmentation = "1.12.0"
lz4_flex = "0.11.5"
nom-language = { version = "0.1.0", default-features = false }

# Dependencies used for WASM
[target.'cfg(target_arch = "wasm32")'.dependencies]
uuid = { version = "1", features = ["v4", "v7", "js"], optional = true }

[dev-dependencies]
anyhow = "1"
criterion = "0.8"
chrono-tz = "0.10"
serde_json = "1"
indoc = "2"
tracing-test = { version = "0.2", default-features = false }
mlua = { version = "0.10", default-features = false, features = ["lua54", "send", "vendored"] }
quickcheck = { version = "1" }
regex = { version = "1", default-features = false, features = ["std", "perf", "unicode"] }
paste = { version = "1", default-features = false }
proptest = { version = "1" }
proptest-derive = { version = "0.6" }

[build-dependencies]
lalrpop = { version = "0.22", default-features = false }
serde_yaml = "0.9.34"
ua-parser = { version = "0.2" }

[[bench]]
name = "kind"
harness = false

[[bench]]
name = "stdlib"
harness = false
required-features = ["default", "test"]
