[package]
name = "ripsaw-tests"
version = "1.0.0"
edition = "2024"
publish = false

[dependencies]
ripsaw = { path = "../../", features = ["test_framework"] }
chrono-tz = "0.10"
clap.workspace = true
glob = "0.3"
tracing-subscriber = { version = "0.3.22", default-features = false, features = ["fmt"] }

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = { version = "0.6.1" }

[features]
default = []
